Fixed alignment

--- a/src/App.css
+++ b/src/App.css
@@ -41,9 +41,12 @@ body{
 }
 
 *{
-    border: 1px solid red;
+    /* border: 1px solid red; */
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: 60;
     font-weight: bold;
     color: whitesmoke;
+}
+.result{
+    z-index: auto;
 }
